# sandbox-ocr

./: .env.example  .gitignore  CLAUDE.md  DEEPSEEK_SETUP.md  QUICKSTART.md  README.md  TODO.md  USAGE_EXAMPLE.md  ocr_providers.py  olmocr_extractor.py  pyproject.toml  requirements_snippet.txt  test1.md  test2.md  test_colocated.py  test_debug.py  test_deepseek.py  test_ocr.py
