[project]
name = "olmocr-test"
version = "0.1.0"
description = "Testing OLMoCR with DeepInfra remote inference"
requires-python = ">=3.11"
dependencies = [
    "olmocr>=0.4.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
